# armv4t_emu

./: Cargo.toml  LICENSE  README.html  README.md  arm.rs  bit_util.rs  exception.rs  mem.rs  mod.rs  mode.rs  reg.rs  thumb.rs  util.rs
reference/: gbatek.html
src/: alignment.rs  arm.rs  bit_util.rs  example_mem.rs  exception.rs  lib.rs  mem.rs  mode.rs  reg.rs  thumb.rs  util.rs
src/testdata/: emutest_arm4.S  emutest_arm6.S  emutest_thm1.S  emutest_thm2.S
src/testmod/: ram.rs
src/tests/: mod.rs  ram.rs
src/tests/data/: Makefile  emutest_arm0.S  emutest_arm3.S  emutest_thm3.S
testdata/: Makefile  emutest_arm1.S  emutest_arm2.S  emutest_arm5.S  emutest_arm8.S  emutest_thm4.S  emutest_thm6.S  emutest_thm7.S  emutest_thm8.S
tests/data/: emutest_arm7.S  emutest_thm0.S  emutest_thm5.S
