[package]
name = "arm7tdmi-rs"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>", "Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.6.2"
