[package]
name = "arm7tdmi-rs"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>", "Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[features]
default = []
advanced_disasm = ["capstone"]

[dependencies]
log = "0.4.8"
serde = { version = "1.0", features = ["derive"], optional = true }
capstone = { version = "0.6.0", optional = true }

[dev-dependencies]
env_logger = "0.6.2"
