[package]
name = "armv4t_emu"
description = "An emulator for the ARMv4t instruction set"
authors = ["Sean Purcell <me@seanp.xyz>", "Daniel Prilik <danielprilik@gmail.com>"]
version = "0.1.1"
license = "MIT"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/armv4t_emu"
homepage = "https://github.com/daniel5151/armv4t_emu"
repository = "https://github.com/daniel5151/armv4t_emu"
keywords = ["emulator", "emulation", "arm", "gba"]
categories = ["emulators"]

[features]
default = []
serde-serialize = ["serde", "serde-big-array"]
advanced_disasm = ["capstone"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde-big-array = { version = "0.3", optional = true }
capstone = { version = "0.6", optional = true }
